cmake_minimum_required(VERSION 3.4.1)
project(learn_queue)
file(GLOB target_files "*learn.cpp")

foreach(traget_file ${target_files})
    message(${traget_file})
    string(REGEX REPLACE "^[\/A-Za-z0-9_-]+\/\|.cpp" "" current_file ${traget_file})
    message(${current_file})
    add_executable(${current_file} ${traget_file})
endforeach()
